# SAAMS

./: README.md
Saams.Net/: Saams.Net.sln
Saams.Net/Saams.Api/: Program.cs  Saams.Api.csproj  Saams.Api.http  WeatherForecast.cs
Saams.Net/Saams.Api/Attributes/: AllowAnonymousAttribute.cs
Saams.Net/Saams.Api/Controllers/: AreaController.cs  AuthController.cs  ChannelController.cs  CompanyController.cs  DepartmentController.cs  DesignationController.cs  LeaveController.cs  LoginController.cs  PrivilegeController.cs  ReaderController.cs  RoleController.cs  RolePrivilegeController.cs  ShiftController.cs  (+2 more)
Saams.Net/Saams.EF/: IEntity.cs  SaamsContext.cs
docs/: SAAMS-SRS.docx
docs/Documentations/: Dashboard documentation.docx
docs/UI/: Channel-documentation.docx  Designation-documentation.docx  Shift-documentation.docx
saams-db/: .gitignore  package-lock.json  package.json  tsconfig.json
saams-db/src/: config.ts  index.ts  user-role.ts  user.ts  users.ts
saams-ui/: .gitignore  package-lock.json  package.json  preload.ts  tsconfig.json
saams-ui/src/: app.tsx  config.ts  constants.ts  global.ts  index.html  index.ts  main.ts  preload.ts  renderer.ts
saams_db/: .env  .gitignore  Cargo.toml  diesel.toml
saams_db/migrations/2024-09-08-173710_create_saams/: down.sql  up.sql
saams_db/migrations/2024-09-10-213532_create_saams/: down.sql  up.sql
saams_db/src/: db.rs  error.rs  main.rs  schema.rs
saams_db/src/controller/: departments_controller.rs
saams_db/src/model/: db.rs  departments_model.rs  sex_model.rs
saams_db/src/schema/: schema.rs
(+100 files in other folders)
