[package]
name = "saams_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15"